Update: playwright yml file

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,83 +1,52 @@
-name: Publish Playwright Test Report
+name: Publish Report to gh-pages
 
 on:
   push:
     branches:
-      - main
-  schedule:
-    - cron: '00 17 * * 1-5'  # At 17:00 UTC, Monday to Friday
+      - main  # Change this to your main branch if it's different
 
 jobs:
-  ui_test:
+  build:
     runs-on: windows-latest
-
+    
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: '16'  # Specify your Node.js version
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Install dependencies
+        run: |
+          npm install          
 
       - name: Run Playwright Tests
-        run: npm run test
-
-      - name: Copy Contents of Playwright Report
+        run: |
+          npm run test  # Generate the report in HTML format
+      
+      - name: Copy contents of playwright-report
         if: always()
         run: |
-          mkdir -p ${{ github.workspace }}/generated-report
-          cp -r ${{ github.workspace }}/playwright-report/* ${{ github.workspace }}/generated-report/
+              mkdir -p generated-report
+              cp -r ${{ github.workspace }}/playwright-report/* generated-report/
 
-      - name: Configure SSH Key
-        if: always()
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Remove Old Host Key
-        if: always()
-        run: ssh-keygen -R github.com || true
-
-      - name: Ensure Known Hosts
-        if: always()
-        run: ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Clone Target Repository
-        if: always()
+      - name: Publish Report to gh-pages
         run: |
-          git clone git@github.com:sabbir-of/playwright-report.git gh-pages-repo
-          cd gh-pages-repo
-          git remote set-url origin git@github.com:sabbir-of/playwright-report.git
-          git checkout -B gh-pages
+          git config --global user.name "sabbir-of"
+          git config --global user.email "sabbir.of@gmail.com"
+          
+          # Clone the target repo
+          git clone --branch gh-pages https://github.com/sabbir.of/playwright-report.git gh-pages-repo/
+          
+          # Copy the report to the target repo
+          cp -r ${{ github.workspace }}/generated-report/* gh-pages-repo/  # Adjust the path to your report
 
-      # - name: Clean Up Existing Files
-      #   if: always()
-      #   run: |
-      #     cd gh-pages-repo
-      #     git rm -rf .
-      #     Remove-Item -Recurse -Force *
+          # Change to the target repo directory
+          cd gh-pages-repo/
 
-      - name: Configure Git User and Handle Line Endings
-        if: always()
-        working-directory: gh-pages-repo
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git config core.autocrlf true
-
-      - name: Copy New Report
-        if: always()
-        run: |
-          cp -r ${{ github.workspace }}/generated-report/* gh-pages-repo/
-
-      - name: Commit and Push Changes
-        if: always()
-        working-directory: gh-pages-repo
-        run: |
+          # Add, commit and push changes
           git add .
-          git commit -m "Update Playwright report"
-          git push -u git@github.com:sabbir-of/playwright-report.git gh-pages --force || git push -u git@github.com:sabbir-of/playwright-report.git --delete gh-pages && git push -u git@github.com:sabbir-of/playwright-report.git gh-pages --force
+          git commit -m "Update report"
+          git push --force https://sabbir-of:${{ secrets.GH_TOKEN }}@github.com/sabbir-of/playwright-report.git gh-pages
